[gd_scene load_steps=26 format=3 uid="uid://dpq1a3gus0vh5"]

[ext_resource type="Texture2D" uid="uid://cq7jmf3tfevka" path="res://Assets/Tiles/UI/Reload/Reload.png" id="1_e3rmg"]
[ext_resource type="Script" path="res://Scripts/UI/WeaponMagazine.gd" id="1_hu7ly"]
[ext_resource type="Script" path="res://Scripts/UI/UI.gd" id="1_oso6c"]
[ext_resource type="Texture2D" uid="uid://b1swi34bcv4xy" path="res://Assets/Effects/Damage.png" id="2_ekwew"]
[ext_resource type="Texture2D" uid="uid://ddslcfc3vga2m" path="res://Assets/Weapons/MagicWand/Model.png" id="3_l23nr"]
[ext_resource type="Texture2D" uid="uid://b1pyai8wkb1gb" path="res://Assets/Tiles/UI/map_65.png" id="4_njn3e"]
[ext_resource type="Texture2D" uid="uid://da56lbhr67csw" path="res://Assets/Tiles/UI/Health/GUI.png" id="5_xwy3e"]
[ext_resource type="Texture2D" uid="uid://cicmwnleg4vpj" path="res://Assets/Tiles/UI/Health/HealthProgress.png" id="6_pwkru"]
[ext_resource type="Texture2D" uid="uid://dw67f4gljbsu4" path="res://Assets/Tiles/UI/Health/ManaProgress.png" id="7_bv8r6"]
[ext_resource type="FontFile" uid="uid://rx1fwbperk0v" path="res://Fonts/m5x7.ttf" id="8_mhqff"]
[ext_resource type="Texture2D" uid="uid://cgu8ai41e3ow8" path="res://Assets/Characters/1.png" id="9_l6urg"]

[sub_resource type="Theme" id="Theme_befff"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o7odr"]
bg_color = Color(0.255659, 0.255659, 0.255659, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.154876, 0.154876, 0.154876, 1)
border_blend = true

[sub_resource type="LabelSettings" id="LabelSettings_soi6b"]
font_size = 21

[sub_resource type="LabelSettings" id="LabelSettings_nxc6m"]
font_size = 21

[sub_resource type="Animation" id="Animation_wbgye"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon/Reload:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="Animation" id="Animation_ve5wh"]
resource_name = "reload"
length = 2.0
loop_mode = 1
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon/Reload:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.0002, 0.0003, 0.0004, 0.0005, 0.0006, 0.0007, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [6.28319, 6.28319, 6.28319, 6.28319, 6.28319, 6.28319, 6.28319, 0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dxa03"]
_data = {
"RESET": SubResource("Animation_wbgye"),
"reload": SubResource("Animation_ve5wh")
}

[sub_resource type="Theme" id="Theme_58fil"]
default_font = ExtResource("8_mhqff")
default_font_size = 25

[sub_resource type="AtlasTexture" id="AtlasTexture_t6ce3"]
atlas = ExtResource("9_l6urg")
region = Rect2(7, 15, 33, 48)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uaucb"]

[sub_resource type="Animation" id="Animation_a1wc2"]
resource_name = "Fade_In"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.498039), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_soufn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_y23rf"]
resource_name = "Fade_Out"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.498039), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bfmhi"]
_data = {
"Fade_In": SubResource("Animation_a1wc2"),
"Fade_Out": SubResource("Animation_y23rf"),
"RESET": SubResource("Animation_soufn")
}

[node name="Ui" type="CanvasLayer"]
script = ExtResource("1_oso6c")

[node name="Weapon" type="Panel" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -132.0
offset_bottom = 47.0
grow_horizontal = 0
rotation = -6.28319
size_flags_horizontal = 8
size_flags_vertical = 0
theme = SubResource("Theme_befff")
theme_override_styles/panel = SubResource("StyleBoxFlat_o7odr")
script = ExtResource("1_hu7ly")

[node name="Reload" type="TextureRect" parent="Weapon"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(19.9752, 19.9576)
texture = ExtResource("1_e3rmg")
stretch_mode = 3

[node name="Weapon" type="Node2D" parent="Weapon"]

[node name="WeaponIMG" type="TextureRect" parent="Weapon/Weapon"]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 11.0
offset_top = 7.0
offset_right = 53.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture = ExtResource("3_l23nr")
stretch_mode = 5

[node name="Magazin" type="Label" parent="Weapon/Weapon"]
offset_left = 64.0
offset_top = 8.0
offset_right = 88.0
offset_bottom = 38.0
text = "10"
label_settings = SubResource("LabelSettings_soi6b")
horizontal_alignment = 2

[node name="MagazinCapacity" type="Label" parent="Weapon/Weapon"]
offset_left = 90.0
offset_top = 8.0
offset_right = 122.0
offset_bottom = 38.0
text = "/30"
label_settings = SubResource("LabelSettings_nxc6m")

[node name="ReloadPlayer" type="AnimationPlayer" parent="Weapon"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_dxa03")
}

[node name="Character" type="Panel" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Character"]
layout_mode = 0
offset_left = 0.485
offset_top = 0.507
offset_right = 196.485
offset_bottom = 74.007
texture = ExtResource("5_xwy3e")
expand_mode = 5
stretch_mode = 6

[node name="HP" type="TextureProgressBar" parent="Character"]
layout_mode = 0
offset_left = 80.0
offset_top = 7.43951
offset_right = 189.975
offset_bottom = 16.4395
value = 50.0
nine_patch_stretch = true
texture_progress = ExtResource("6_pwkru")

[node name="Mana" type="TextureProgressBar" parent="Character"]
layout_mode = 0
offset_left = 80.0
offset_top = 24.0
offset_right = 190.0
offset_bottom = 33.16
value = 75.0
nine_patch_stretch = true
stretch_margin_left = 40
texture_progress = ExtResource("7_bv8r6")

[node name="Coins" type="Label" parent="Character"]
layout_mode = 0
offset_left = 103.611
offset_top = 44.9251
offset_right = 187.611
offset_bottom = 67.9251
theme = SubResource("Theme_58fil")
text = "0"

[node name="CharacterImage" type="TextureRect" parent="Character"]
layout_mode = 0
offset_left = 6.0
offset_top = 7.0
offset_right = 73.0
offset_bottom = 68.0
texture = SubResource("AtlasTexture_t6ce3")
expand_mode = 2
stretch_mode = 5

[node name="Panel2" type="Panel" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.989891, 1)
theme_override_styles/panel = SubResource("StyleBoxEmpty_uaucb")

[node name="TextureButton" type="TextureButton" parent="Panel2"]
layout_mode = 0
offset_left = -287.91
offset_top = -62.0
offset_right = -247.91
offset_bottom = -22.0
scale = Vector2(2.13144, 2)
texture_normal = ExtResource("4_njn3e")
stretch_mode = 3

[node name="DamageEffect" type="Panel" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="DamageEffect"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_ekwew")
expand_mode = 1

[node name="Timer" type="Timer" parent="DamageEffect"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="DamageEffect"]
libraries = {
"": SubResource("AnimationLibrary_bfmhi")
}

[connection signal="timeout" from="DamageEffect/Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="DamageEffect/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
